--- a/notify.scss
+++ b/notify.scss
@@ -58,7 +58,7 @@ body {
                     color: hsl(224, 21%, 14%);
                 }
 
-                .count {
+                #count {
                     background-color: hsl(224, 63%, 24%);
                     width: 30px;
                     height: 27px;
